# rsh

./: 1  BASHRC_ALIAS_LOADING_FIX.md  BASHRC_COMPATIBILITY_IMPROVEMENTS.md  BASHRC_IMPROVEMENTS_COMPLETE.md  CHANGELOG.md  COMPATIBILITY.md  COMPLETION.md  Cargo.toml  EVOLUTION.md  PROGRESS.md  README.md  bench.sh  bench_nu.sh  test_bashrc_compat.sh  test_bashrc_interactive.sh
.github/workflows/: ci-bootstrap.yml  ci.yml  clippy-diagnostics.yml  clippy-fix.yml  feature-diagnostics.yml  feature-fix.yml
benches/: bench_core.rs  bench_value.rs
src/: agent.rs  ai.rs  bookmarks.rs  builtins.rs  cli.rs  closure_expr.rs  completer.rs  completion_spec.rs  config.rs  data.rs  debug.rs  editor.rs  environment.rs  execution.rs  execution_context.rs  executor.rs  expand.rs  glob_match.rs  highlighter.rs  history.rs  hooks.rs  job.rs  keybindings.rs  lib.rs  main.rs  osc.rs  pipeline_data.rs  probe.rs  prompt.rs  session.rs  shell.rs  signal.rs  signature.rs  stream.rs  structured.rs  suggest.rs  value.rs  value_builtins.rs  workflows.rs  zjump.rs
src/parser/: ast.rs  cache.rs  lexer.rs  mod.rs  parse.rs
src/specs/: cargo.json  docker.json  git.json  kubectl.json  npm.json  workflows.json
tests/: builtin_tests.rs  cli_tests.rs  closure_expr_tests.rs  converter_tests.rs  execution_semantics_tests.rs  expand_tests.rs  integration_tests.rs  interpolation_tests.rs  let_closure_tests.rs  math_into_tests.rs  open_save_tests.rs  parser_strict_tests.rs  parser_tests.rs  phase10_tests.rs  phase11_tests.rs  phase12_tests.rs  phase13_tests.rs  phase14_tests.rs  phase15_tests.rs  phase16_tests.rs  phase7_tests.rs  phase9_tests.rs  table_ops_tests.rs  text_bridge_tests.rs  value_pipeline_tests.rs
