[package]
name = "rsh"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2"
crossterm = "0.29.0"
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["process", "fs", "signal", "term"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_core"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
