[package]
name = "rsh"
version = "0.2.0"
edition = "2021"
description = "A modern Bash-inspired shell with structured data pipelines"
readme = "README.md"
repository = "https://github.com/beamiter/rsh"
keywords = ["shell", "bash", "terminal", "pipeline", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["ai"]
ai = ["dep:ureq", "dep:jagent"]

[dependencies]
glob = "0.3"
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
unicode-width = "0.2"
crossterm = "0.29.0"
dirs = "6.0.0"
nix = { version = "0.31.3", features = ["process", "fs", "signal", "term"] }
ureq = { version = "2", optional = true }
jagent = { git = "https://github.com/beamiter/jagent", optional = true }
serde_yaml = "0.9"
toml = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench_core"
harness = false

[[bench]]
name = "bench_value"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
